--- a/kooplexhub/hub/templates/container/startopen.html
+++ b/kooplexhub/hub/templates/container/startopen.html
@@ -1,11 +1,13 @@
-{% if container.state == container.ST_RUNNING %}
-<a href="{% url 'service:open' container.id next_page %}" target="_blank" role="button" class="btn btn-success" style="min-width: 6em; text-align: left;" data-toggle="tooltip" title="Access environment {{ container.name }}">
-  <span class="oi oi-external-link" aria-hidden="true"> Open</span></a>
-{% elif container.state == container.ST_NEED_RESTART %}
-<a href="{% url 'service:open' container.id next_page %}" target="_blank" role="button" class="btn btn-warning" style="min-width: 6em; text-align: left;" data-toggle="tooltip" title="Access inconsistent environment {{ container.name }}">
-  <span class="oi oi-external-link" aria-hidden="true"> Open</span></a>
+{% if service.state == service.ST_RUNNING %}
+  <a href="{% url 'service:open' service.id next_page %}" target="_blank" role="button" class="btn btn-success" data-toggle="tooltip" title="Access environment {{ service.name }}">
+    <span class="oi oi-external-link" aria-hidden="true">{{ label_open }}</span></a>
+{% elif service.state == service.ST_NEED_RESTART %}
+  <a href="{% url 'service:open' service.id next_page %}" target="_blank" role="button" class="btn btn-warning" data-toggle="tooltip" title="Access inconsistent environment {{ service.name }}">
+    <span class="oi oi-external-link" aria-hidden="true">{{ label_open }}</span></a>
+{% elif service.state == service.ST_ERROR %}
+  <a href="#" role="button" class="btn btn-outline-warning disabled" data-toggle="tooltip" title="Access erronous environment {{ service.name }}">
+    <span class="oi oi-flash" aria-hidden="true">{{ label_open }}</span></a>
 {% else %}
-<a href="{% url 'service:start' container.id next_page %}" role="button" class="btn btn-outline-secondary" style="min-width: 6em; text-align: left;" data-toggle="tooltip" title="Start environment {{ container.name }}">
-  <span class="oi oi-flash" aria-hidden="true"> Start</span></a>
+  <a href="{% url 'service:start' service.id next_page %}" role="button" class="btn btn-outline-secondary" data-toggle="tooltip" title="Start environment {{ service.name }}">
+    <span class="oi oi-flash" aria-hidden="true">{{ label_start }}</span></a>
 {% endif %}
-
