--- a/kooplexhub/hub/templates/service/service_submenu.html
+++ b/kooplexhub/hub/templates/service/service_submenu.html
@@ -9,7 +9,7 @@
      <div class="col-8">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"><a {% if submenu == 'versioncontrol' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'service_external:versioncontrol' %}" {% endif %}>Version control</a></li>
-          <li class="nav-item"><a {% if submenu == 'filesynch' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'service_external:filesync' %}" {% endif %}>File synchronization</a></li>
+          <li class="nav-item"><a {% if submenu == 'filesync' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'service_external:filesync' %}" {% endif %}>File synchronization</a></li>
         </ul>
      </div>
   </div>
