hints, search fixes

--- a/kooplexhub/hub/templates/index.html
+++ b/kooplexhub/hub/templates/index.html
@@ -75,4 +75,6 @@
    
  {% endblock %}
 
-{% block main_content_right %}{% endblock %}
+{% block main_content_right %}
+  {% include 'footer_right.html' %}
+{% endblock %}
